<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".detail.DetailFragment">

    <ImageView
        android:id="@+id/detailImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/backgrounds/scenic" />

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Title"
                android:layout_marginTop="16dp"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/DescTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:maxLines="5"
                android:textSize="16sp"
                tools:text="Desc" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/black"
                android:gravity="center"
                tools:text="Önemli bilgiler"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="Başlangıç Tarihi:" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Son Katılım Tarihi:"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Çekiliş Tarihi:"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="İlan Tarihi:"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Min. Harcama Tutarı:"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Toplam Hediye Değeri:"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Toplam Hediye Sayısı:"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tableStartingDateTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/baslangic_tarihi" />

                    <TextView
                        android:id="@+id/tablelastParticipationDateTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/son_katilim_tarihi" />

                    <TextView
                        android:id="@+id/tableDrawTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/cekilis_tarihi" />

                    <TextView
                        android:id="@+id/tableadvertDateTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/ilan_tarihi" />

                    <TextView
                        android:id="@+id/tableminExpenditureAmountTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/min_harcama_tutari" />

                    <TextView
                        android:id="@+id/tabletotalGiftValueTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/toplam_hediye_degeri" />

                    <TextView
                        android:id="@+id/tabletotalNumberOfGiftsTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/toplam_hediye_sayisi" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/followButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/takip_et" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
